tests/neg-scalajs/js-native-call.scala
import scala.scalajs.js
import scala.scalajs.js.annotation.*

class A {
  def foo: Int = js.native // error
}
